--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.115.0
-numpy==2.1.2
-pydantic==1.10.12
-Requests==2.32.3
-soundfile==0.12.1
-torch==2.3.1
-transformers==4.42.4
-uvicorn==0.31.1
+fastapi
+numpy
+pydantic
+Requests
+soundfile
+torch
+transformers
+uvicorn
